# reed-solomon

./: README.md
erasure_coding/: Cargo.toml
erasure_coding/src/: erasure.rs  lib.rs
galois_lib/: Cargo.toml
galois_lib/src/: galois.rs
sol_storage/: Cargo.toml
sol_storage/src/: main.rs
