[package]
name = "sol_storage"
version = "0.1.0"
authors = ["Omar Elawady <omarelawady1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

galois_lib = {path = "../galois_lib"}
erasure_coding = {path = "../erasure_coding"}